# hpu_fpga

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  README.md  _typos.toml  justfile  setup.sh
docs/: debug.md  dop.md  faq.md  hpu.md  hpu_parameters.md  iop.md  parsing_flag.md  parsing_flags.md
fw/arm/: CMakeLists.txt  README.md  merge_amc_version.json  reload_amc.xsdb
fw/arm/scripts/: build.sh  build_bsp.sh  cov_analysis.sh  create_bsp.tcl
fw/arm/src/: amc.c
fw/arm/src/apps/asdm/: asdm.h
fw/arm/src/apps/bim/: bim.c
fw/arm/src/apps/in_band/: hpu_dop_fmt.h  hpu_iop_fmt.h  in_band_telemetry.c  in_band_telemetry.h  ucore.c  ucore.h
fw/arm/src/common/core_libs/dal/: dal.h
fw/arm/src/common/core_libs/pll/: pll.c  pll.h
fw/arm/src/common/include/: amc_version.h  standard.h
fw/arm/src/device_drivers/eeprom/: eeprom.h
fw/arm/src/device_drivers/eeprom/linux/: eeprom.c
fw/arm/src/device_drivers/gcq_driver/src/: gcq.h  gcq_debug.h  gcq_driver.c  gcq_features.c  gcq_hw.h  gcq_internal.h  gcq_ring.h
fw/arm/src/device_drivers/sensors/ina3221/: ina3221.h
fw/arm/src/device_drivers/sensors/isl68221/: isl68221.h
fw/arm/src/device_drivers/sensors/sys_mon/: sys_mon.h
fw/arm/src/device_drivers/stream_isc/: stream_isc.c  stream_isc.h
fw/arm/src/fal/: fw_if.h
fw/arm/src/fal/emmc/: fw_if_emmc.h  fw_if_emmc_amc.c
fw/arm/src/fal/gcq/: fw_if_gcq.h  fw_if_gcq_amc.c
fw/arm/src/fal/ospi/: fw_if_ospi_amc.c
fw/arm/src/fal/test/: fw_if_test.h
fw/arm/src/osal/src/: osal.h
fw/arm/src/osal/src/freeRTOS/: osal.c
fw/arm/src/profiles/v80/: profile_bim.h  profile_debug_menu.c  profile_fal.c  profile_hal.h
fw/arm/src/proxy_drivers/ami/: ami_proxy_driver.c  ami_proxy_driver.h
fw/arm/src/proxy_drivers/apc/: apc_proxy_driver.h
fw/arm/src/proxy_drivers/bmc/: bmc_proxy_driver.h
fw/ublaze/core_config/: Readme.md
fw/ublaze/core_config/ublaze/: build_microblaze.tcl
fw/ublaze/core_config/ublaze_dcache/: build_microblaze.tcl
fw/ublaze/script/: generate_core.sh  parser.py  setup_project.tcl
fw/ublaze/scripts/: generate_core.sh  parser.py  setup_project.tcl  simu_file_list.j2  xsct_script.tcl
fw/ublaze/src/: hpu_dop_fmt.h  hpu_iop_fmt.h  makefile  ucore.h  ucore_fw.c
hw/common_lib/common/info/: file_list.json
hw/common_lib/common/rtl/: common_lib_bin_to_one_hot.sv  common_lib_count_ones.sv  common_lib_delay_side.sv  common_lib_find_first_bit_equal_to_1.sv  common_lib_find_last_bit_equal_to_1.sv  common_lib_one_hot_to_bin.sv  common_lib_pseudo_invert.sv  common_lib_pseudo_reverse.sv  common_lib_pulse_to_rdy_vld.sv  common_lib_select_from_one_hot.sv
hw/common_lib/common_package/info/: file_list.json
hw/common_lib/common_package/rtl/: common_definition_pkg.sv
hw/common_lib/fifo/constraint/: fifo_timing_constraints_local.xdc
hw/common_lib/fifo/info/: file_list.json
hw/common_lib/fifo/rtl/: fifo_delay.sv  fifo_element.sv  fifo_element_type1.sv  fifo_element_type2.sv  fifo_element_type3.sv  fifo_ram_rdy_vld.sv  fifo_reg.sv  xpm_fifo_sync_wrapper.sv
hw/common_lib/ram_rd_rdy_vld/info/: file_list.json
hw/common_lib/ram_rd_rdy_vld/rtl/: ram_rd_rdy_vld.sv
hw/common_lib/ram_wrapper/info/: file_list.json
hw/common_lib/ram_wrapper/rtl/: ram_1R1W_behav.sv  ram_1R1W_behav_core.sv  ram_2RW_behav.sv  ram_2RW_behav_core.sv  ram_wrapper_1R1W.sv  ram_wrapper_1R1W_WSTRB.sv  ram_wrapper_2RW.sv  ram_wrapper_pkg.sv
hw/common_lib/rom_wrapper/info/: file_list.json
hw/common_lib/rom_wrapper/rtl/: rom_1R_behav.sv  rom_1R_behav_core.sv  rom_2R_behav.sv  rom_2R_behav_core.sv  rom_wrapper_1R.sv  rom_wrapper_2R.sv
hw/common_lib/stream_dispatch/info/: file_list.json
hw/common_lib/stream_dispatch/rtl/: stream_disp_format.sv  stream_dispatch.sv
hw/common_lib/stream_to_pipe/info/: file_list.json
hw/common_lib/stream_to_pipe/rtl/: stream_to_pipe.sv
hw/common_lib/stream_to_seq/info/: file_list.json
hw/common_lib/stream_to_seq/rtl/: seq_to_stream.sv  stream_to_seq.sv
hw/memory_file/rom_test/: test_64.mem
hw/memory_file/twiddle/NTT_CORE_ARCH_GF64/: gen_gf64_rom_twd.sh
hw/module/hpu/constraint/: hpu_timing_constraints_local.xdc
hw/module/hpu/info/: file_list.json
hw/module/pe_alu/rtl/: pe_alu.sv  (+1 more)
hw/script/ci/: nreg.py
hw/scripts/ci/: nreg.csv  nreg.py
hw/scripts/create_module/: create_file_list.py  create_module.py
hw/scripts/edalize/: run_edalize.py
hw/scripts/relicense/: relicense.py
hw/scripts/simu/: parse_flag_NTT_MOD.sh
hw/scripts/verible/: run_verible.py
hw/syn/vivado/: vivado_properties.tcl  vivado_properties_ooc.tcl
setup_config/: setup_base.sh
sw/decomposer/: Decomposition.ipynb  balanced_decomp_unfix_sign_round_bit.py  carl_decomp.py  hw_friendly_decomposer.py
sw/modular_switch/: modsw_to_2powN.py
sw/monomial_mult/: mm_rotation.py  mm_rotation_rev.py  mm_rotation_rev_stages.py  mm_sample_extract.py  monomial_mult.py
sw/mult64bit/: mult64bit.py
sw/ntt/: ntt_coord.py  ntt_gf64.sage  ntt_gf64_bsk_order.py  ntt_gf64_network.py  ntt_lib.py  ntt_network.py  ntt_network_pcg.py  ntt_network_pcg_last_stage.py  ntt_network_pcg_new.py  ntt_network_pcg_stride.py  ntt_network_pcg_stride_last_stage.py  ntt_twiddles.sage
sw/ntt/templates/: ntt_core_gf64_phi_phi_pkg.sv.j2
sw/solinas/: solinas.py
versal/: justfile  run_syn_hpu_1part_psi16.sh  run_syn_hpu_3parts_psi32.sh  run_syn_hpu_3parts_psi64.sh
versal/bitstreams/: top_hpu_psi64_350_tuniform.00000b715273035020521e2505071329.pdi
versal/constraints/: general_constraints.xdc  xcv80_pin_assignment.xdc
versal/constraints/hooks/: hook_opt.post.tcl  hook_opt.pre.tcl  hook_place.post.tcl  hook_place.pre.tcl  hook_route.post.tcl  hook_route.pre.tcl  hook_syn.post.tcl  hook_syn.pre.tcl  hook_write_device_image.pre.tcl
versal/iprepo/: .gitattributes
versal/scripts/: build_all.tcl  create_shell.tcl  fully_rewrite_flash.tcl
versal/scripts/bd/: bd_base_logic.tcl  bd_clock_reset.tcl  bd_ddr_noc.tcl  bd_hpu_plug.tcl  bd_lib.tcl  bd_main.tcl  bd_noc_wrapper.tcl  bd_shell_wrapper.tcl
versal/scripts/declare_define/: declare_define.py
versal/scripts/fpt/: fpt_pdi_gen.py  gen_fpt.py
(+2152 files in other folders)
